    and add normative read hints. Moreover, document the -m switch for a2enmod.
  * Merge spelling and grammar fixes provided by Justin B Rye. Much appreciated!
  * Change various state and run directories used by Apache from
    /var/run/<basename> to /var/run/apache2/<basename>. This might change again
    for Wheezy+1 to adopt /run.
  * Use more exit status codes for a2query, make its output more readable.

 -- Arno Töll <arno@debian.org>  Thu, 26 Apr 2012 03:22:05 +0200

apache2 (2.4.2-1) experimental; urgency=low

  * New upstream release

  [ Arno Töll ]
  * Drop update-alternative call in postrm. Our prerm script catches them
    already anyway.
  * Update my mail address.
  * Fix "dh_apache2 does not set "x" bits on /usr/lib/apache2/modules/"
    Set directory permissions to 755 by default (Closes: #666875). Thanks Axel
    Beckert for the hint.
  * Add /usr/share/doc/apache2/migrate-sites.pl, a script to assist users to
    give sites a .conf suffix, add a hint to the NEWS file.
  * Do stateful configuration handling by remembering who enabled when a
    particular piece of configuration. That way in can be told under which
    circumstances for example modules should be re-enabled. Thanks to Filip M.
    Nowak who was providing a patch where my changes are built upon.
  * Fix apxs to import LDFLAGS from config_vars.mk. Moreover, make it possible
    to override LDFLAGS at compile time by defining LDLAGS in the environment,
    just like it is possible for CFLAGS. This also means, config_vars.mk now
    exports hardening build flags by default.
  * Provide the virtual packages httpd and httpd-cgi again.


  [ Stefan Fritsch ]
  * Change default config to deny access to / in the file system and only
    allow access to /var/www, /usr/share, and /usr/lib/cgi-bin. Closes: #341022
  * Disable MultiViews in the default config.
  * Update ssl default cipher config, add alternative speed optimized config.
    Closes: #649020